# komunita

./: .gitignore  Dockerfile  README.md  pyproject.toml  příkazy1.txt  příkazy2.txt  requirements.txt  run_app.bat
.devcontainer/: devcontainer.json
src/ec_balance/: __init__.py  cli.py
src/ec_balance/pipeline/: step1_wide_to_long.py  step2_local_pv.py  step3_sharing.py  step4_batt_local.py  step4a_batt_local_byhour.py  step4b_batt_econ.py  step5_batt_central.py  step5_excel_econ.py  step5a_batt_central_byhour.py  step6_excel_scenarios.py  step7_site_hourly_report.py
src/ec_balance/utils/: check.py  config.py  doctor.py  inspect_wide_headers.py  make_kwp_by_site.py  sharing_lib.py
src/ec_balance_service/: app.py
tools/: run_ui.py
