[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-balance-komunita"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "openpyxl",
  "streamlit"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
